--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ section.main{
   height: 80px;
   background-color: #16F57D;
   margin-top: -30px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px)  {
